# chainlit

app/: .env  app.py  chat.py  create_assistant.py  lanchain.py  main.py  pyproject.toml  requirement.txt  requirements.txt  sockets.py  spare.py  trial1.py
app/.chainlit/translations/: en-US.json
