[tool.poetry]
name = "chainlit"
version = "0.1.0"
description = ""
authors = ["taranesh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.6.2"
langchain-openai = "^0.0.8"
pycryptodome = "^3.20.0"
cryptography = "^42.0.5"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
